--- a/src/css/tcs.css
+++ b/src/css/tcs.css
@@ -1,13 +1,13 @@
-/*header {
-	padding: 3px;
-}
-*/
-/*.tcs-slogans {
-	display: inline;
-}*/
-
 body {
 	background-color: rgb(224, 247, 254);
+}
+
+header {
+	padding: 3px;
+}
+
+.tcs-header-address {
+	margin-bottom: 8px;
 }
 
 /* Line up 'get quote' and social icons horizontally. */
@@ -16,10 +16,10 @@ body {
 	vertical-align: middle;
 } 
 
-/*.tcs-nav-inline li a {
-	padding: 10px;
+.tcs-nav-inline li a {
+	padding: 0 8px;
 }
-*/
+/* Padding, not margin, seems to determine the 'distance between' the icons. */
 
 /* Actually shows the background-image icons generated by spritesheet. */
 .icon { 
